# SafeDetect

./: .env.example  .gitignore  COMPONENT_LIBRARY.md  Dockerfile  KAFKA_TROUBLESHOOTING.md  Makefile  README.md  SPEC.json  SPEC.md  TEST_RESULTS.md  TODO.md  UI_UX_ENHANCEMENT_SUMMARY.md  docker-compose.yml  package-lock.json  pytest.ini  test_server.py  test_system.py
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
Authentication_service/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
Authentication_service/backend_Authentication/: package-lock.json  package.json  server.js
Authentication_service/src/: App.tsx  index.css
Authentication_service/src/components/: AuthLayout.tsx  ForgotPasswordForm.tsx  MagicLinkForm.tsx  ResetPasswordForm.tsx  SignUpForm.tsx
Authentication_service/src/contexts/: AuthContext.tsx
Dashboard_Service/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
Dashboard_Service/backend_Kafka/: Dockerfile  kafka_config.js  package.json  server.js
Dashboard_Service/public/: index.html  result.gltf
Dashboard_Service/public/models/: stylised_low_poly_car.glb
Dashboard_Service/src/: App.css  App.js
Dashboard_Service/src/components/: DetectionOverlay.js  Truck3D.js
Dashboard_Service/src/hooks/: useThreeScene.js  useWebSocket.js
Dashboard_Service/src/services/: WebSocketService.js
Dashboard_Service/src/styles/: accessibility.css  animations.css  responsive.css  variables.css
agent-plans/: ui-description.json
agent-plans/features/: feature001.json
backend/: README.md  create_test_video.py  docker-compose.yml  requirements.txt
backend/computer_vision/: README_MULTI_CAMERA.md  README_RASPBERRY_PI.md  blind_spot.py  detection.py  kafka_producer.py  multi_camera_detector.py  pi_utils.py  test_kafka_connection.py  test_multi_camera.py  webrtc_server.py  websocket_server.py
backend/computer_vision/archive/: websocket_server.py
backend_Python/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend_Python/.sonar/: report-task.txt
backend_Python/computer_vision/: README_MULTI_CAMERA.md  blind_spot.py  detection.py  kafka_producer.py  multi_camera_detector.py  pi_config.py  requirements_pi.txt
backend_Python/computer_vision/archive/: multidetection_camWBSv1.py
backend_Python/documents/: README.md
backend_Python/tests/: conftest.py  test_detection.py  test_kafka_producer.py  test_multi_camera.py
backend_cpp/: CMakeLists.txt  README.md  test_cmake.txt  vcpkg.json
backend_cpp/models/: convert_model.py
backend_cpp/src/: audio_alert.cpp  audio_alert.hpp  config.cpp  config.hpp  kafka_producer.cpp  kafka_producer.hpp  main.cpp  multi_camera_detector.cpp  multi_camera_detector.hpp  nms.hpp
backend_cpp/test_build/: CMakeCache.txt  CMakeLists.txt
cpp_implementation/: CMakeLists.txt  README.md  build.sh  convert_model.py
cpp_implementation/src/: CMakeLists.txt  main.cpp
cpp_implementation/src/core/: Detection.cpp  Detection.hpp  KafkaProducer.cpp  KafkaProducer.hpp  MultiCameraDetector.cpp  MultiCameraDetector.hpp
cpp_implementation/src/models/: YOLO.cpp  YOLO.hpp
cpp_implementation/src/test/: test_kafka.cpp
cpp_implementation/src/utils/: Config.hpp
docs/: integration_guide.md  setup_guide.md  testing_guide.md
mobile/: App.js  README.md  index.html  package-lock.json  package.json
mobile/components/: DetectionOverlay.js  Truck3D.js
mobile/services/: WebSocketService.js
safedetect/: package-lock.json  package.json  tsconfig.json
safedetect/backend/: .env.example  package-lock.json  package.json  server.js
safedetect/src/: App.tsx  index.css
safedetect/src/components/: AuthLayout.tsx  ForgotPasswordForm.tsx  SignInForm.tsx  SignUpForm.tsx
safedetect/src/contexts/: AuthContext.tsx
safedetect/src/pages/: ForgotPassword.tsx  ResetPassword.tsx  SignIn.tsx  SignUp.tsx  VerifyEmail.tsx
shared/: __init__.py  config.py
web/: README.md  package-lock.json  package.json  webpack.config.js
web/backend/: kafka_config.js  package-lock.json  server.js
web/src/: App.css  App.js
(+27 files in other folders)
